test(lotto): 2개 맞았을 때 정상동작하는지 확인하는 테스트 코드 작성