@@ -48,7 +48,7 @@ class LottoTest {
     @Test
     void getPrizeMoney_정상동작_3등_당첨(){
         Lotto lotto = new Lotto(List.of(1,2,3,4,5,6));
-        int prizeMoney = lotto.getPrizeMoney(Arrays.asList(Arrays.asList(1,2,3,4,5,10)), 45);
+        int prizeMoney = lotto.getPrizeMoney(List.of(Arrays.asList(1, 2, 3, 4, 5, 10)), 45);
         assertThat(prizeMoney).isEqualTo(Rank.THIRD.getWinningsPrice());
     }
 
@@ -56,7 +56,7 @@ class LottoTest {
     @Test
     void getPrizeMoney_정상동작_4등_당첨(){
         Lotto lotto = new Lotto(List.of(1,2,3,4,5,6));
-        int prizeMoney = lotto.getPrizeMoney(Arrays.asList(Arrays.asList(1,2,3,4,9,10)), 45);
+        int prizeMoney = lotto.getPrizeMoney(List.of(Arrays.asList(1, 2, 3, 4, 9, 10)), 45);
         assertThat(prizeMoney).isEqualTo(Rank.FOURTH.getWinningsPrice());
     }
 
@@ -64,7 +64,15 @@ class LottoTest {
     @Test
     void getPrizeMoney_정상동작_5등_당첨(){
         Lotto lotto = new Lotto(List.of(1,2,3,4,5,6));
-        int prizeMoney = lotto.getPrizeMoney(Arrays.asList(Arrays.asList(1,2,3,8,9,10)), 45);
+        int prizeMoney = lotto.getPrizeMoney(List.of(Arrays.asList(1, 2, 3, 8, 9, 10)), 45);
         assertThat(prizeMoney).isEqualTo(Rank.FIFTH.getWinningsPrice());
+    }
+
+    @DisplayName("2개 맞았을때 정상동작 하는지 확인한다.")
+    @Test
+    void getPrizeMoney_정상동작_2개(){
+        Lotto lotto = new Lotto(List.of(1,2,3,4,5,6));
+        int prizeMoney = lotto.getPrizeMoney(List.of(Arrays.asList(1, 2, 7, 10, 11, 12)), 45);
+        assertThat(prizeMoney).isEqualTo(0);
     }
 }
